src/main/java/application/testData/invalidRandomAddresses/hard/completedIncorrectly/todo/RandomAddressesWithFieldCompletedTwiceWithDifferentData.java
package application.testData.invalidRandomAddresses.hard.completedIncorrectly.todo;

public class RandomAddressesWithFieldCompletedTwiceWithDifferentData {
    // intr o adresa 2 cityuri in fieldul corespunzator sau nu
}
